Dashboard UI redesign: header, stat cards, chart toggles, grouped filters + framework updates